--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,12 +20,11 @@ import { useTranslations } from '@/i18n';
         <!--</div>-->
         <div class="mb-2 flex space-x-2 text-sm text-gray-500 dark:text-gray-400">
             <!--<Link href="/about">{SITE_METADATA.title}</Link>-->
-            <div>{` • `}</div>
             <div>{`© ${new Date().getFullYear()}`}</div>
             <div>{` • `}</div>
             <Link href="/">{t('siteMetadata.title')}</Link>
         </div>
-        <div class="mb-8 text-sm text-gray-500 dark:text-gray-400">
+        <!-- <div class="mb-8 text-sm text-gray-500 dark:text-gray-400">
             <Link href={SITE_METADATA.siteRepo}>
                 {t('siteMetadata.title')} {` is open source. `}
                 {` View `}
@@ -36,6 +35,6 @@ import { useTranslations } from '@/i18n';
                 <span class="underline">give it a star</span>
                 {` if you like it.`}
             </Link>
-        </div>
+        </div> -->
     </div>
 </footer>
