--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const t = useTranslations();
 ---
 
 <header class="flex items-center justify-between py-10">
-  <div class="mr-3 md:w-40 w-20">
+  <div class="mr-3 md:w-12 w-8 hover:scale-110 transition-all">
     <a href="/" aria-label={t("siteMetadata.headerTitle")}>
       <Logo class="w-full" />
     </a>
@@ -20,7 +20,7 @@ const t = useTranslations();
       NAVIGATION.filter((link) => link.href !== "/").map((link) => (
         <HeaderLink
           href={link.href}
-          class="hidden sm:block font-medium text-gray-900 dark:text-gray-100"
+          class="hidden sm:block font-medium text-gray-900 dark:text-gray-100 hover:bg-gray-800 transition p-2 rounded-xl"
         >
           {t(link.title)}
         </HeaderLink>
