--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import LogoImage from "@/assets/logo.svg";
+import LogoImage from "@/assets/logo.webp";
 import { useTranslations } from "@/i18n";
 
 const t = useTranslations();
