--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const t = useTranslations();
       NAVIGATION.filter((link) => link.href !== "/").map((link) => (
         <HeaderLink
           href={link.href}
-          class="hidden sm:block font-medium text-gray-900 dark:text-gray-100 hover:bg-gray-800 transition p-2 rounded-xl"
+          class="hidden sm:block font-medium text-gray-900 dark:text-gray-100 hover:text-gray-100 hover:bg-gray-800 transition py-2 px-4 rounded-xl"
         >
           {t(link.title)}
         </HeaderLink>
