--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -127,7 +127,7 @@ const { Content, headings } = await post.render();
                       </li>
                       <li class="text-gray-500 dark:text-gray-400">
                         {data.occupation && data.company
-                          ? `${data.occupation} at ${data.company}`
+                          ? `${data.occupation} En ${data.company}`
                           : data.company}
                       </li>
                     </>
@@ -139,8 +139,8 @@ const { Content, headings } = await post.render();
           <div class="xl:col-span-3 xl:row-span-2 xl:pb-0">
             {
               post.data.draft && (
-                <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 dark:bg-yellow-500 dark:border-yellow-300 mt-10">
-                  <p class="leading-5 text-yellow-700 dark:text-yellow-300">
+                <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 dark:bg-yellow-500 dark:border-yellow-700 mt-10">
+                  <p class="leading-5 text-yellow-700 dark:text-yellow-900">
                     {t('layouts.postLayout.draftMessage')}
                   </p>
                 </div>
